# ValidadorExcel

./: Dockerfile  README.md  pyproject.toml
src/: contrato.py  frontend.py
tests/: test_contrato.py
