[tool.poetry]
name = "validadorexcel"
version = "0.1.0"
description = ""
authors = ["PauloHBSF <paulohbsfilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
black = "^24.8.0"
uvicorn = "^0.30.6"
taskipy = "^1.13.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
run = "poetry run streamlit run src/frontend.py --server.maxUploadSize=500"
